--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "gulp-uglify": "^3.0.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-bootstrap-icons": "^1.5.0",
     "react-countdown": "^2.3.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
